--- a/static/index.html
+++ b/static/index.html
@@ -229,7 +229,7 @@
 
         <p class="h3">Задайте нам вопрос</p>
 
-        <form class="form" method="POST" action="/">
+        <form class="form" method="POST" action="/mail">
          <p><input type="text" placeholder="Ваше имя" name="name" required></p>
          <p><input type="text" placeholder="Ваш E-mail" name="mail" required></p>
          <p>Сообщение:<br><br>
