--- a/static/index.html
+++ b/static/index.html
@@ -230,10 +230,10 @@
         <p class="h3">Задайте нам вопрос</p>
 
         <form class="form" method="POST" action="#">
-         <p><input type="text" placeholder="Ваше имя" name="name" required></p>
-         <p><input type="text" placeholder="Ваш E-mail" name="mail" required></p>
+         <p><input type="text" placeholder="Ваше имя" name="name" class="form-input" required></p>
+         <p><input type="text" placeholder="Ваш E-mail" name="mail" class="form-input" required></p>
          <p>Сообщение:<br><br>
-          <textarea rows="10" cols="50" name="msg" required></textarea></p>
+          <textarea rows="10" cols="50" name="msg" class="form-input" required></textarea></p>
          <p><input type="submit" value="Спросить" class="btn btn-default form-submit"></p>
 
 
