--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,7 @@
     <meta name="keywords" content="Запчасти, гомсельмаш, полесье, палессе, гомель, сельмаш" />
     <meta name="description" content="Продажа запчастей гомельского завода Гомсельмаш" />
 
+    <meta name="google-site-verification" content="o2t6i0dXGJI67YrUtoZ71AzL040suIh995dZAM9ps2w" />
 
   </head>
   <body>
