add text before sales hits

--- a/static/index.html
+++ b/static/index.html
@@ -109,11 +109,6 @@
       <span class="h2">Запчасти</span>
        <span class="h3">для</span>
 
-<!--        <div class="arrows">
-        <div class="arrow-left"></div>
-        <div class="arrow-right"></div>
-      </div> -->
-
 <div class="container">
       <div class="feature">
         <h2>КЗС - 1218</h2>
@@ -142,8 +137,11 @@
 </div>
 
 
-  <span class="h3">Хиты продаж</span>  
+<h2>Продаётся новая КПР-9 по цене 600 млн.бел.рублей. Доставка по РБ</h2>
 
+<br><br><br>
+
+<span class="h3">Хиты продаж</span>  
 
 <div class="cloud_container">
     <ul class="cloud">
