--- a/static/index.html
+++ b/static/index.html
@@ -52,6 +52,7 @@
           <div class="nav">
             <ul class="horisontal">
               <li class="menu1">Запчасти</li>
+              <li class="menu4">Спецпредложение</li>
               <li class="menu2">Как мы работаем</li>
               <li class="menu3">Контакты</li>
               <li class="header-phone"><i class="icon-phone"></i><span> (029) 151-13-91</span></li>
@@ -156,6 +157,44 @@
 </div>
 
     </div>  
+
+
+    <div class="slogan_section special-offer">
+      <div class="slogan_container">
+        <p class="h3">Специальное предложение</p>
+      </div>
+    </div>
+
+
+    <div class="section_what_we_sell">
+
+      <span class="h2">Звоните и заказывайте</span>
+
+      <div class="container">
+        <div class="feature">
+          <h2>Редуктор КЗК-12-0210000</h2>
+          <img src="img/reductor.jpg" alt="Редуктор" title="Редуктор">
+          <h3>14.770 рос. руб.</h3>
+        </div>
+
+        <div class="feature">
+        <h2>КПР-9. Доставка по РБ</h2>
+          <img src="img/kpr-9.jpg" alt="КПР-9" title="КПР-9">
+          <h3>600 млн.бел.рублей.</h3>
+        </div>
+
+        <br><br><br>
+
+        <span class="h3">Сообщайте, что пришли с сайта. Будем благодарны</span>
+
+      </div>
+
+
+
+      <br><br><br>
+
+    </div>  
+
 
 
 
