--- a/static/index.html
+++ b/static/index.html
@@ -174,7 +174,7 @@
         <div class="feature">
           <h2>Редуктор КЗК-12-0210000</h2>
           <img src="img/reductor.jpg" alt="Редуктор" title="Редуктор">
-          <h3>14.770 рос. руб.</h3>
+          <h3>14770 рос. руб.</h3>
         </div>
 
         <div class="feature">
@@ -230,7 +230,7 @@
       <div class="step" id="step3">
        <i class="icon-ok icon-large"></i>
         <p class="head">Получите товар</p>
-        <p>Займите первое место в республиканских "Дожинках"</p>
+        <p>Возможна доставка нашим транспортом</p>
 
       </div>
 
