--- a/static/index.html
+++ b/static/index.html
@@ -138,9 +138,7 @@
 </div>
 
 
-<h2>Продаётся новая КПР-9 по цене 600 млн.бел.рублей. Доставка по РБ</h2>
-
-<br><br><br>
+<br><br>
 
 <span class="h3">Хиты продаж</span>  
 
@@ -171,16 +169,11 @@
       <span class="h2">Звоните и заказывайте</span>
 
       <div class="container">
-        <div class="feature">
-          <h2>Редуктор КЗК-12-0210000</h2>
-          <img src="img/reductor.jpg" alt="Редуктор" title="Редуктор">
-          <h3>14770 рос. руб.</h3>
-        </div>
 
         <div class="feature">
-        <h2>КПР-9. Доставка по РБ</h2>
-          <img src="img/kpr-9.jpg" alt="КПР-9" title="КПР-9">
-          <h3>600 млн.бел.рублей.</h3>
+        <h2>для российского потребителя предлагается колпак ускоряющего барабана КЗК-12-0102474</h2>
+          <!--<img src="img/kpr-9.jpg" alt="КПР-9" title="КПР-9">-->
+          <!--<h3>600 млн.бел.рублей.</h3>-->
         </div>
 
         <br><br><br>
