--- a/static/index.html
+++ b/static/index.html
@@ -172,7 +172,7 @@
 
         <div class="feature">
         <h2>для российского потребителя предлагается колпак ускоряющего барабана КЗК-12-0102474</h2>
-          <!--<img src="img/kpr-9.jpg" alt="КПР-9" title="КПР-9">-->
+          <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
           <!--<h3>600 млн.бел.рублей.</h3>-->
         </div>
 
