--- a/static/index.html
+++ b/static/index.html
@@ -171,7 +171,7 @@
       <div class="container">
 
         <div class="feature">
-        <h2>для российского потребителя предлагается колпак ускоряющего барабана КЗК-12-0102474</h2>
+        <h2>Для российского потребителя предлагается колпак ускоряющего барабана КЗК-12-0102474</h2>
           <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
           <!--<h3>600 млн.бел.рублей.</h3>-->
         </div>
