--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Запчасти Гомсельмаш</title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -11,280 +11,292 @@
 
     <meta charset="UTF-8">
 
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 
-    <meta name='yandex-verification' content='78e5fd05d3057049' />
-    <meta name="google-site-verification" content="GQSxP5fbixKIH1JP3I_STe4M8IXrY-AUi7cS7o5vy8M" />
+    <meta name='yandex-verification' content='78e5fd05d3057049'/>
+    <meta name="google-site-verification" content="GQSxP5fbixKIH1JP3I_STe4M8IXrY-AUi7cS7o5vy8M"/>
 
-    <meta name="keywords" content="Запчасти, гомсельмаш, полесье, палессе, гомель, сельмаш" />
-    <meta name="description" content="Продажа запчастей гомельского завода Гомсельмаш" />
+    <meta name="keywords" content="Запчасти, гомсельмаш, полесье, палессе, гомель, сельмаш"/>
+    <meta name="description" content="Продажа запчастей гомельского завода Гомсельмаш"/>
 
-    <meta name="google-site-verification" content="o2t6i0dXGJI67YrUtoZ71AzL040suIh995dZAM9ps2w" />
+    <meta name="google-site-verification" content="o2t6i0dXGJI67YrUtoZ71AzL040suIh995dZAM9ps2w"/>
 
-  </head>
-  <body>
-
-
-
-    <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-41840466-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-  </script>
+</head>
+<body>
 
 
-    <div class="header">
-      <div class="wrapper">
-          <div class="logo">
-            <i class="icon-cogs icon-logo"></i><h1 class="span_logo">Запчасти Гомсельмаш</h1>
-          </div>
+<script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-41840466-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+
+</script>
 
 
+<div class="header">
+    <div class="wrapper">
+        <div class="logo">
+            <i class="icon-cogs icon-logo"></i>
 
-          <div class="nav">
-            <ul class="horisontal">
-              <li class="menu1">Запчасти</li>
-              <li class="menu4">Спецпредложение</li>
-              <li class="menu2">Как мы работаем</li>
-              <li class="menu3">Контакты</li>
-              <li class="header-phone"><i class="icon-phone"></i><span> (029) 151-13-91</span></li>
-            </ul>
-          </div>
-
-      </div>
-    </div>
-
-
-     <div class="up"></div>
-
-
-      <div class="slider_section">
-        <div class="slider">
-          <div class="slides">
-                    <ul class="ul-slides">
-                      <li class="slide1">
-                        <p>Более 9000 наименований запчастей РУП "Гомсельмаш"</p>
-                        <img src="img/gomselmash_traktor.jpg" alt="Первый слайд: трактор"/>
-                      </li>
-                      <li class="slide2">
-                        <p>Решета, подбарабанья, редуктора, шнеки, шкивы, ремни, ножи ...</p>
-                        <img src="img/gomselmash_zapchasti.jpg" alt="Второй слайд: запчасти"/>
-                      </li>
-                      <li class="slide3">
-                        <p>Простая процедура покупки</p>
-                        <img src="img/easy_procedure.jpg" alt="Третий слайд: легкая сделка" />
-                      </li>
-
-                    
-                     </ul>
-    
-
-                    <div class="slider_nav">
-
-                      <span class="slider_next"></span>
-
-                    </div>      
-          </div>
-
+            <h1 class="span_logo">Запчасти Гомсельмаш</h1>
         </div>
-      </div>
 
 
+        <div class="nav">
+            <ul class="horisontal">
+                <li class="menu1">Запчасти</li>
+                <li class="menu4">Спецпредложение</li>
+                <li class="menu2">Как мы работаем</li>
+                <li class="menu3">Контакты</li>
+                <li class="header-phone"><i class="icon-phone"></i><span> (029) 151-13-91</span></li>
+            </ul>
+        </div>
 
-    <div class="slogan_section" id="menu1">
-      <div class="slogan_container">
+    </div>
+</div>
+
+
+<div class="up"></div>
+
+
+<div class="slider_section">
+    <div class="slider">
+        <div class="slides">
+            <ul class="ul-slides">
+                <li class="slide1">
+                    <p>Более 9000 наименований запчастей РУП "Гомсельмаш"</p>
+                    <img src="img/gomselmash_traktor.jpg" alt="Первый слайд: трактор"/>
+                </li>
+                <li class="slide2">
+                    <p>Решета, подбарабанья, редуктора, шнеки, шкивы, ремни, ножи ...</p>
+                    <img src="img/gomselmash_zapchasti.jpg" alt="Второй слайд: запчасти"/>
+                </li>
+                <li class="slide3">
+                    <p>Простая процедура покупки</p>
+                    <img src="img/easy_procedure.jpg" alt="Третий слайд: легкая сделка"/>
+                </li>
+
+
+            </ul>
+
+
+            <div class="slider_nav">
+
+                <span class="slider_next"></span>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<div class="slogan_section" id="menu1">
+    <div class="slogan_container">
         <p class="h3">Мы продаем запчасти для любой техники Гомсельмаш</p>
-      </div>
     </div>
-
-
-    <div class="section_what_we_sell">
-      <span class="h2">Запчасти</span>
-       <span class="h3">для</span>
-
-<div class="container">
-      <div class="feature">
-        <h2>КЗС - 1218</h2>
-        <img src="img/kzs-1218.jpg" alt="КЗС - 1218" title="КЗС - 1218">
-      </div>
-
-      <div class="feature">
-        <h2>УЭС - 2 - 250</h2>
-        <img src="img/ues-2-250.jpg" alt="УЭС - 2 - 250" title="УЭС - 2 - 250">
-      </div>
-
-      <div class="feature">
-        <h2>КПК - 3000</h2>
-        <img src="img/kpk-3000.jpg" alt="КПК - 3000" title="КПК - 3000">
-      </div>
-
-      <div class="feature">
-        <h2>КВК - 800</h2>
-        <img src="img/kvk-800.jpg" alt="КВК - 800" title="КВК - 800">
-      </div>
-
-      <div class="feature">
-        <h2>КПР - 9</h2>
-        <img src="img/kpr-9.jpg" alt="КПР - 9" title="КПР - 9">
-      </div>
 </div>
 
 
-<br><br>
+<div class="section_what_we_sell">
+    <span class="h2">Запчасти</span>
+    <span class="h3">для</span>
 
-<span class="h3">Хиты продаж</span>  
-
-<div class="cloud_container">
-    <ul class="cloud">
-      <li class="li1"><h3>гидроцилиндр вариатора  барабана</h3></li>
-      <li class="li2"><h3>угловая передача "шумахер"</h3></li>
-      <li class="li3"><h3>сдвоенные пальцы</h3></li>
-      <li class="li4"><h3>шкив ведомый</h3></li>
-      <li class="li5"><h3>редуктора kuhn</h3></li>
-      <li class="li6"><h3>наклонная камера</h3></li>
-      <li class="li7"><h3>транспортёр наклонной камеры КЗС-1218</h3></li>
-    </ul>
-</div>
-
-    </div>  
-
-
-    <div class="slogan_section special-offer">
-      <div class="slogan_container">
-        <p class="h3">Специальное предложение</p>
-      </div>
-    </div>
-
-
-    <div class="section_what_we_sell">
-
-      <span class="h2">Звоните и заказывайте</span>
-
-      <div class="container">
+    <div class="container">
+        <div class="feature">
+            <h2>КЗС - 1218</h2>
+            <img src="img/kzs-1218.jpg" alt="КЗС - 1218" title="КЗС - 1218">
+        </div>
 
         <div class="feature">
-        <h2>Для российского потребителя предлагается колпак ускоряющего барабана КЗК-12-0102474</h2>
-          <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
-          <!--<h3>600 млн.бел.рублей.</h3>-->
+            <h2>УЭС - 2 - 250</h2>
+            <img src="img/ues-2-250.jpg" alt="УЭС - 2 - 250" title="УЭС - 2 - 250">
+        </div>
+
+        <div class="feature">
+            <h2>КПК - 3000</h2>
+            <img src="img/kpk-3000.jpg" alt="КПК - 3000" title="КПК - 3000">
+        </div>
+
+        <div class="feature">
+            <h2>КВК - 800</h2>
+            <img src="img/kvk-800.jpg" alt="КВК - 800" title="КВК - 800">
+        </div>
+
+        <div class="feature">
+            <h2>КПР - 9</h2>
+            <img src="img/kpr-9.jpg" alt="КПР - 9" title="КПР - 9">
+        </div>
+    </div>
+
+
+    <br><br>
+
+    <span class="h3">Хиты продаж</span>
+
+    <div class="cloud_container">
+        <ul class="cloud">
+            <li class="li1"><h3>гидроцилиндр вариатора барабана</h3></li>
+            <li class="li2"><h3>угловая передача "шумахер"</h3></li>
+            <li class="li3"><h3>сдвоенные пальцы</h3></li>
+            <li class="li4"><h3>шкив ведомый</h3></li>
+            <li class="li5"><h3>редуктора kuhn</h3></li>
+            <li class="li6"><h3>наклонная камера</h3></li>
+            <li class="li7"><h3>транспортёр наклонной камеры КЗС-1218</h3></li>
+        </ul>
+    </div>
+
+</div>
+
+
+<div class="slogan_section special-offer">
+    <div class="slogan_container">
+        <p class="h3">Специальное предложение</p>
+    </div>
+</div>
+
+
+<div class="section_what_we_sell">
+
+    <span class="h2">Звоните и заказывайте</span>
+
+    <div class="container">
+
+        <div class="feature">
+            Для российского потребителя предлагается
+
+            <br>
+            <h2>колпак ускоряющего барабана КЗК-12-0102474</h2>
+            <p></p>
+
+            <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
+            <!--<h3>600 млн.бел.рублей.</h3>-->
         </div>
 
         <br><br><br>
 
         <span class="h3">Сообщайте, что пришли с сайта. Будем благодарны</span>
 
-      </div>
-
-
-
-      <br><br><br>
-
-    </div>  
-
-
-
-
-    <div class="slogan_section">
-      <div class="slogan_container">
-        <p class="h3">На сайте нет прайса: позвоните нам или вышлите заявку по факсу или E-mail</p>
-      </div>
     </div>
 
 
-
-    <div class="how_we_work">
-      <span class="h2">Как мы работаем</span>
-
-    <div class="container">
-      <div class="step" id="step1">
-        <i class="icon-phone icon-large"></i>
-        <p class="head">Позвоните нам</p>
-        <p>Это самый быстрый и удобный способ получить информацию о цене и наличии товара</p>
-    </div>
-
-      <div class="step_arrow"></div>
-
-      <div class="step" id="step2">
-       <i class="icon-money icon-large"></i>
-        <p class="head">Сделайте предоплату</p>
-        <p>Мы работаем по предоплате и с любой формой оплаты</p>
-
-      </div>
-
-      <div class="step_arrow"></div>
-
-      <div class="step" id="step3">
-       <i class="icon-ok icon-large"></i>
-        <p class="head">Получите товар</p>
-        <p>Возможна доставка нашим транспортом</p>
-
-      </div>
+    <br>
 
 </div>
 
-  <span class="h3">Наши основные клиенты - предприниматели из Башкортостана, Липецкой, Брестской, Гродненской и Минской областей</span>
 
-    </div>      
+<div class="slogan_section">
+    <div class="slogan_container">
+        <p class="h3">На сайте нет прайса: позвоните нам или вышлите заявку по факсу или E-mail</p>
+    </div>
+</div>
 
 
-  <div class="slogan_section">
-      <div class="slogan_container">
-        <p class="h3">Не продает завод - продадим мы</p>
-      </div>
+<div class="how_we_work">
+    <span class="h2">Как мы работаем</span>
+
+    <div class="container">
+        <div class="step" id="step1">
+            <i class="icon-phone icon-large"></i>
+
+            <p class="head">Позвоните нам</p>
+
+            <p>Это самый быстрый и удобный способ получить информацию о цене и наличии товара</p>
+        </div>
+
+        <div class="step_arrow"></div>
+
+        <div class="step" id="step2">
+            <i class="icon-money icon-large"></i>
+
+            <p class="head">Сделайте предоплату</p>
+
+            <p>Мы работаем по предоплате и с любой формой оплаты</p>
+
+        </div>
+
+        <div class="step_arrow"></div>
+
+        <div class="step" id="step3">
+            <i class="icon-ok icon-large"></i>
+
+            <p class="head">Получите товар</p>
+
+            <p>Возможна доставка нашим транспортом</p>
+
+        </div>
+
     </div>
 
+    <span class="h3">Наши основные клиенты - предприниматели из Башкортостана, Липецкой, Брестской, Гродненской и Минской областей</span>
 
-    <div class="contacts_down">
-      <span class="h2">Контакты</span>
-      <div class="contacts">
+</div>
+
+
+<div class="slogan_section">
+    <div class="slogan_container">
+        <p class="h3">Не продает завод - продадим мы</p>
+    </div>
+</div>
+
+
+<div class="contacts_down">
+    <span class="h2">Контакты</span>
+
+    <div class="contacts">
         <p class="h3">Мы находимся в Гомеле</p>
 
         <div itemscope itemtype="http://data-vocabulary.org/Organization" class="contacts_container">
 
 
-          <p itemprop="telephone"><i class="icon-phone icon-2x"></i> (029) 151 13 91 (моб)</p>
-          <p itemprop="faxNumber"><i class="icon-phone icon-2x"></i> (0232) 93 33 42 (факс)</p>
-          <p itemprop="email"><i class="icon-envelope icon-2x"></i> Blackvilt@gmail.com</p>
+            <p itemprop="telephone"><i class="icon-phone icon-2x"></i> (029) 151 13 91 (моб)</p>
+
+            <p itemprop="faxNumber"><i class="icon-phone icon-2x"></i> (0232) 93 33 42 (факс)</p>
+
+            <p itemprop="email"><i class="icon-envelope icon-2x"></i> Blackvilt@gmail.com</p>
         </div>
-      </div>
+    </div>
 
 
-      <div class="contacts">
+    <div class="contacts">
 
         <p class="h3">Задайте нам вопрос</p>
 
         <form class="form" method="POST" action="#">
-         <p><input type="text" placeholder="Ваше имя" name="name" class="form-input" required></p>
-         <p><input type="text" placeholder="Ваш E-mail" name="mail" class="form-input" required></p>
-         <p>Сообщение:<br><br>
-          <textarea rows="10" cols="50" name="msg" class="form-input" required></textarea></p>
-         <p><input type="submit" value="Спросить" class="btn btn-default form-submit"></p>
+            <p><input type="text" placeholder="Ваше имя" name="name" class="form-input" required></p>
+
+            <p><input type="text" placeholder="Ваш E-mail" name="mail" class="form-input" required></p>
+
+            <p>Сообщение:<br><br>
+                <textarea rows="10" cols="50" name="msg" class="form-input" required></textarea></p>
+
+            <p><input type="submit" value="Спросить" class="btn btn-default form-submit"></p>
 
 
         </form>
 
-      </div>
-
     </div>
 
+</div>
 
-    <div class="footer">
-      <div class="wrapper">
-          <span class="madeby h4">ВебСтудия: EasyClick</span>
-          <span class="copyright h4">Запчасти Гомсельмаш</span>
-      </div>
+
+<div class="footer">
+    <div class="wrapper">
+        <span class="madeby h4">ВебСтудия: EasyClick</span>
+        <span class="copyright h4">Запчасти Гомсельмаш</span>
     </div>
+</div>
 
 
-
-
-
-  </body>
+</body>
 </html>
