--- a/static/index.html
+++ b/static/index.html
@@ -146,13 +146,8 @@
 
     <div class="cloud_container">
         <ul class="cloud">
-            <li class="li1"><h3>гидроцилиндр вариатора барабана</h3></li>
-            <li class="li2"><h3>угловая передача "шумахер"</h3></li>
-            <li class="li3"><h3>сдвоенные пальцы</h3></li>
-            <li class="li4"><h3>шкив ведомый</h3></li>
-            <li class="li5"><h3>редуктора kuhn</h3></li>
-            <li class="li6"><h3>наклонная камера</h3></li>
-            <li class="li7"><h3>транспортёр наклонной камеры КЗС-1218</h3></li>
+            <li class="li1"><h3>КЗК 12-0210000 редуктор 4,5млн</h3></li>
+            <li class="li2"><h3>для РФ - 18тыс.руб.РФ</h3></li>
         </ul>
     </div>
 
