--- a/static/index.html
+++ b/static/index.html
@@ -144,12 +144,34 @@
 
     <span class="h3">Хиты продаж</span>
 
-    <div class="cloud_container">
-        <ul class="cloud">
-            <li class="li1"><h3>КЗК 12-0210000 редуктор 4,5млн</h3></li>
-            <li class="li2"><h3>для РФ - 18тыс.руб.РФ</h3></li>
-        </ul>
+    <div class="feature">
+        Для российского потребителя предлагается
+
+        <br>
+        <h2>колпак ускоряющего барабана КЗК-12-0102474</h2>
+        <p></p>
+
+        <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
+        <!--<h3>600 млн.бел.рублей.</h3>-->
     </div>
+
+    <div class="feature">
+        Для российского потребителя предлагается
+
+        <br>
+        <h2>КЗК 12-0210000 редуктор</h2>
+        <p></p>
+
+        <h3>4.5 млн.бел.рублей.</h3>
+        <h3>для РФ - 18тыс.руб.РФ</h3>
+    </div>
+
+    <!--<div class="cloud_container">-->
+        <!--<ul class="cloud">-->
+            <!--<li class="li1"><h3>КЗК 12-0210000 редуктор 4,5млн</h3></li>-->
+            <!--<li class="li2"><h3>для РФ - 18тыс.руб.РФ</h3></li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
 </div>
 
@@ -165,18 +187,28 @@
 
     <span class="h2">Звоните и заказывайте</span>
 
+    <h3>Собственное производство</h3>
+
+
+    <p>Диск ЛДВ(ЛДТ)</p>
+    <p>Диск БДЮ 01.401</p>
+    <p>Диск 560х6(АДУ-6)</p>
+    <p>Диск АПД-7,5</p>
+    <p>Стойка поворотная БДМ 4Х4 0121000(АДУ)</p>
+    <p>Стойка поворотнаяЛДВ(ЛДТ)</p>
+    <p>Ось режущего узла БДМ-101.01.01(с флянцем)</p>
+    <p>Режущий узел в сборе БДМ 4х4(АДУ-6)</p>
+    <p>Режущий узел в сборе ЛДВ(ЛДТ)</p>
+    <p>Режущий узел в сборе АПД-7,5 (под шпонку)</p>
+    <p>Режущий узел в сборе АПД-7,5(под лыску)</p>
+    <p>Корпус режущего узла АДУ-6 стальной(голый)</p>
+    <p>Корпус режущего узла ЛДВ(ЛДТ) стальной (голый)</p>
+    <p>Наконечник АКШ стойки 32х10</p>
+    <p>Лапа стельчатая 270мм</p>
+    <p>Лапа стрельчатая 320ммЛапа РК(н.043.07.402)</p>
+
+
     <div class="container">
-
-        <div class="feature">
-            Для российского потребителя предлагается
-
-            <br>
-            <h2>колпак ускоряющего барабана КЗК-12-0102474</h2>
-            <p></p>
-
-            <img src="img/kolpak.jpg" alt="КЗК-12-0102474" title="КЗК-12-0102474">
-            <!--<h3>600 млн.бел.рублей.</h3>-->
-        </div>
 
         <br><br><br>
 
@@ -233,7 +265,7 @@
 
     </div>
 
-    <span class="h3">Наши основные клиенты - предприниматели из Башкортостана, Липецкой, Брестской, Гродненской и Минской областей</span>
+    <span class="h3">Все наши клиенты - основные</span>
 
 </div>
 
