--- a/static/index.html
+++ b/static/index.html
@@ -161,9 +161,9 @@
         <br>
         <h2>КЗК 12-0210000 редуктор</h2>
         <p></p>
+        <img src="img/reductor.jpg" alt="редуктор КЗК 12-0210000" title="редуктор КЗК 12-0210000">
 
-        <h3>4.5 млн.бел.рублей.</h3>
-        <h3>для РФ - 18тыс.руб.РФ</h3>
+
     </div>
 
     <!--<div class="cloud_container">-->
@@ -205,7 +205,8 @@
     <p>Корпус режущего узла ЛДВ(ЛДТ) стальной (голый)</p>
     <p>Наконечник АКШ стойки 32х10</p>
     <p>Лапа стельчатая 270мм</p>
-    <p>Лапа стрельчатая 320ммЛапа РК(н.043.07.402)</p>
+    <p>Лапа стрельчатая 320мм</p>
+    <p>Лапа РК(н.043.07.402)</p>
 
 
     <div class="container">
@@ -264,8 +265,6 @@
         </div>
 
     </div>
-
-    <span class="h3">Все наши клиенты - основные</span>
 
 </div>
 
