--- a/static/index.html
+++ b/static/index.html
@@ -189,6 +189,25 @@
 
     <h3>Собственное производство</h3>
 
+    <ul>
+        <li>Диск ЛДВ(ЛДТ)</li>
+        <li>Диск БДЮ 01.401</li>
+        <li>Диск 560х6(АДУ-6)</li>
+        <li>Диск АПД-7,5</li>
+        <li>Стойка поворотная БДМ 4Х4 0121000(АДУ)</li>
+        <li>Стойка поворотнаяЛДВ(ЛДТ)</li>
+        <li>Ось режущего узла БДМ-101.01.01(с флянцем)</li>
+        <li>Режущий узел в сборе БДМ 4х4(АДУ-6)</li>
+        <li>Режущий узел в сборе ЛДВ(ЛДТ)</li>
+        <li>Режущий узел в сборе АПД-7,5 (под шпонку)</li>
+        <li>Режущий узел в сборе АПД-7,5(под лыску)</li>
+        <li>Корпус режущего узла АДУ-6 стальной(голый)</li>
+        <li>Корпус режущего узла ЛДВ(ЛДТ) стальной (голый)</li>
+        <li>Наконечник АКШ стойки 32х10</li>
+        <li>Лапа стельчатая 270мм</li>
+        <li>Лапа стрельчатая 320мм</li>
+        <li>Лапа РК(н.043.07.402)</li>
+    </ul>
 
     <p>Диск ЛДВ(ЛДТ)</p>
     <p>Диск БДЮ 01.401</p>
