--- a/static/index.html
+++ b/static/index.html
@@ -189,7 +189,7 @@
 
     <h3>Собственное производство</h3>
 
-    <ul>
+    <ul class="list">
         <li>Диск ЛДВ(ЛДТ)</li>
         <li>Диск БДЮ 01.401</li>
         <li>Диск 560х6(АДУ-6)</li>
@@ -209,23 +209,6 @@
         <li>Лапа РК(н.043.07.402)</li>
     </ul>
 
-    <p>Диск ЛДВ(ЛДТ)</p>
-    <p>Диск БДЮ 01.401</p>
-    <p>Диск 560х6(АДУ-6)</p>
-    <p>Диск АПД-7,5</p>
-    <p>Стойка поворотная БДМ 4Х4 0121000(АДУ)</p>
-    <p>Стойка поворотнаяЛДВ(ЛДТ)</p>
-    <p>Ось режущего узла БДМ-101.01.01(с флянцем)</p>
-    <p>Режущий узел в сборе БДМ 4х4(АДУ-6)</p>
-    <p>Режущий узел в сборе ЛДВ(ЛДТ)</p>
-    <p>Режущий узел в сборе АПД-7,5 (под шпонку)</p>
-    <p>Режущий узел в сборе АПД-7,5(под лыску)</p>
-    <p>Корпус режущего узла АДУ-6 стальной(голый)</p>
-    <p>Корпус режущего узла ЛДВ(ЛДТ) стальной (голый)</p>
-    <p>Наконечник АКШ стойки 32х10</p>
-    <p>Лапа стельчатая 270мм</p>
-    <p>Лапа стрельчатая 320мм</p>
-    <p>Лапа РК(н.043.07.402)</p>
 
 
     <div class="container">
