--- a/static/index.html
+++ b/static/index.html
@@ -209,9 +209,8 @@
         <!--<li>Лапа РК(н.043.07.402)</li>-->
     <!--</ul>-->
 
-    <img src="img/left-reductor.jpg">
-    <p>Левый редуктор <b>КПР-9-К7006330 KUHN</b></p>
-
+    <img src="img/silentblock.jpg">
+    <p>Сайлентблок <b>КЗР 0202750</b></p>
 
     <div class="container">
 
